[DE-445] JPMS compatibility (#477)
* removed unneeded methods from ConfigPropertiesProvider

* [DE-445] fixed FileConfigPropertiesProvider with JPMS

* [DE-445] JPMS module names